removed S reversal + consolidated sys code

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "<module 'moran' from '/Users/david/playground/mixed-moran/moran.py'>"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,18 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 5\n",
-    "G = nx.complete_graph(N)\n",
+    "N = 3\n",
+    "G = nx.star_graph(N-1)\n",
     "assert len(G) == N"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,6 +105,79 @@
     "cbar = g.axes.figure.colorbar(sm, ax=g.axes)\n",
     "cbar.ax.get_yaxis().labelpad = 15\n",
     "cbar.ax.set_ylabel('r', rotation=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.          0.          0.          0.          0.          0.\n",
+      "   0.          0.        ]\n",
+      " [-0.22916667  0.59027778  0.          0.          0.         -0.36111111\n",
+      "   0.          0.        ]\n",
+      " [-0.22916667  0.          0.59027778  0.          0.          0.\n",
+      "  -0.36111111  0.        ]\n",
+      " [ 0.         -0.21666667 -0.21666667  1.          0.          0.\n",
+      "   0.         -0.56666667]\n",
+      " [-0.41666667  0.          0.          0.          1.         -0.29166667\n",
+      "  -0.29166667  0.        ]\n",
+      " [ 0.         -0.15555556  0.          0.          0.          0.42222222\n",
+      "   0.         -0.26666667]\n",
+      " [ 0.          0.         -0.15555556  0.          0.          0.\n",
+      "   0.42222222 -0.26666667]\n",
+      " [ 0.          0.          0.          0.          0.          0.\n",
+      "   0.          1.        ]]\n",
+      "[0. 1. 1. 1. 1. 1. 1. 0.]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 4.05755396, 4.05755396, 2.75827338, 3.25359712,\n",
+       "       3.86330935, 3.86330935, 0.        ])"
+      ]
+     },
+     "execution_count": 350,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moran.mixed_moran_abs_time_sys(G, r=2, p_Bd=.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0, 0),\n",
+       " (0, 0, 1),\n",
+       " (0, 1, 0),\n",
+       " (0, 1, 1),\n",
+       " (1, 0, 0),\n",
+       " (1, 0, 1),\n",
+       " (1, 1, 0),\n",
+       " (1, 1, 1)]"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "list(product([0,1], repeat=3))"
    ]
   },
   {
